# medi-agent

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  package-lock.json  package.json
.agent/: ARCHITECTURE.md  CLOUD_INFRASTRUCTURE_GUIDE.md  CODING_STANDARDS.md  DESIGN_SYSTEM.md  PROJECT.md  TASKS.md  TEAM.md
.agent/specs/: phase-4.1-agent-core.md
.agent/workflows/: ai-code-review.md  create-pr.md  new-agent.md  new-feature.md
.gemini/: settings.json
.github/: pull_request_template.md
.github/workflows/: backend.yml  ci.yml  deploy-backend.yml  frontend.yml
apps/clinician-portal/: package-lock.json  package.json
apps/patient-portal/: package-lock.json  package.json
backend/: .pre-commit-config.yaml  Dockerfile  README.md  cleanup-policy.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_genai_sdk.py
backend/.github/workflows/: coverage-badge.yml
backend/docs/: EXECUTIVE_SUMMARY.md  PHASE_4.1_COMPLETE.md  README.md
backend/reports/: benchmark_27b_20260321_192905.json  benchmark_27b_20260321_192905.md
backend/scripts/: README.md  benchmark_27b.py  compare_medgemma_gemini.py  run_comprehensive_benchmarks.py  run_comprehensive_tests.py  run_quick_benchmark.py  test_gemini_api.py  test_medgemma_hf.py  test_vertex_ai_integration.py  verify_medgemma_setup.py
backend/src/app/: __init__.py  config.py  main.py
backend/src/app/agents/: __init__.py  base.py
backend/src/app/agents/ingestion/: graph.py
backend/src/app/clients/: __init__.py  deepgram_client.py  gemini.py  medgemma.py  model_router.py  supabase.py
backend/src/app/core/: __init__.py  constants.py  exception_handlers.py  exceptions.py  observability.py  security.py
backend/src/app/db/: connection.py
backend/src/app/db/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_storage_and_auth.sql  004_jwt_claims_hook.sql
backend/src/app/mcp/: __init__.py  base.py  deepgram_server.py  supabase_server.py
backend/src/app/models/: __init__.py  adherence.py  adr.py  appointment.py  auth.py  care_team.py  chat.py  clinician.py  clinician_message.py  common.py  condition.py  document.py  enums.py  feed.py  medication.py  notification.py  obligation.py  patient.py  symptom.py
backend/src/app/routers/: adherence.py  adr.py  appointments.py  auth.py  chat.py  clinicians.py  documents.py  feed.py  medications.py  notifications.py  obligations.py  patients.py
backend/src/app/services/: __init__.py  adherence_service.py  adr_service.py  auth_service.py  chat_service.py  clinician_service.py  dailymed_service.py  document_service.py  feed_service.py  medication_service.py  notification_service.py  obligation_service.py  patient_service.py  rxnorm_service.py
backend/tests/: TESTING_GUIDE.md  conftest.py
backend/tests/integration/: test_middleware.py  test_mock_validation.py
backend/tests/integration/routers/: test_adherence_api.py  test_clinician_api.py  test_document_api.py  test_feed_api.py  test_medication_api.py  test_patient_api.py
backend/tests/unit/: test_adherence_service.py  test_app_boot.py  test_document_service.py  test_mcp_servers.py  test_models.py
backend/tests/unit/agents/: test_base_agent.py  test_ingestion_graph.py
backend/tests/unit/clients/: test_gemini_client.py  test_medgemma_client.py  test_model_router.py
backend/tests/unit/services/: test_auth_service.py  test_dailymed_service.py  test_feed_service.py  test_rxnorm_service.py
docs/: mcp-servers.md  supabase_setup_guide.md
meetings/: 2026-01-30-team.md  2026-02-06-team.md  2026-02-13-advisor.md  2026-02-20-team.md  2026-02-26-team.md  2026-02-27-advisor.md  2026-03-04-team.md  README.md  _template.md
scripts/: check-env.sh  preflight.sh
(+24 files in other folders)
