[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediagent-backend"
version = "0.1.0"
description = "MediAgent — Multi-Agent Healthcare AI Backend"
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff ──────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # Depends() in defaults — standard FastAPI pattern
    "TCH001", # type-checking import (1st party) — too strict for services
    "TCH002", # type-checking import (3rd party) — breaks runtime in services
    "TCH003", # type-checking import (stdlib) — same
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["supabase.*", "deepgram.*", "langgraph.*", "langchain_google_genai.*", "resend.*"]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
