[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediagent-backend"
version = "0.1.0"
description = "MediAgent — Multi-Agent Healthcare AI Backend"
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff ──────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TC"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # Depends() in defaults — standard FastAPI pattern
    "TC001",  # type-checking import (1st party) — too strict for services
    "TC002",  # type-checking import (3rd party) — breaks runtime in services
    "TC003",  # type-checking import (stdlib) — same
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = false
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["supabase.*", "deepgram.*", "langgraph.*", "langchain_google_genai.*", "resend.*", "google.generativeai.*"]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing --cov-report=html --cov-fail-under=80"
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"

# ── Coverage ──────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
